--- a/css/comman.css
+++ b/css/comman.css
@@ -1,8 +1,21 @@
 .btn-primary {
-    background-color: #198754 !important;
-    border-color: #198754 !important;
+    background-color: #308800 !important;
+    border-color: #308800 !important;
 }
 
 .con-icon{
-    color: #198754 !important;
+    color: #308800 !important;
+}
+
+.col-lg-6.wow.fadeInUp.mb-3.formBg {
+    background: #f5f5f5;
+    align-items: center;
+    display: flex;
+    text-align: center;
+    justify-content: center;
+    padding: 58px;
+}
+
+h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6 {
+    color: #ff9000 !important;
 }
