--- a/css/style.css
+++ b/css/style.css
@@ -193,9 +193,9 @@ h6,
 .carousel-caption {
     top: 0;
     left: 0;
-    right: 0;
+    /* right: 0; */
     bottom: 0;
-    display: flex;
+    /* display: flex; */
     align-items: center;
     background: linear-gradient(to right, rgba(2, 36, 91, 1) 0%, rgba(2, 36, 91, 0) 100%);
     z-index: 1;
